# compress-tools-rs

./: .envrc  .gitignore  .rustfmt.toml  .travis.yml  CHANGES.md  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  README.tpl  binding_script.rs  build.rs  devshell.nix  flake.nix  release.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: aarch64.yml  armv7.yml  ci.yml  code_style.yml  linux.yml  macos.yml  security_check.yml  windows.yml
docker/: Dockerfile.cross-aarch64-libarchive  Dockerfile.cross-armv7-libarchive
examples/: uncompress.rs  uncompress_iterator.rs  uncompress_service.rs  uncompress_service_futures.rs  uncompress_service_tokio.rs  uncompress_tool.rs
scripts/: generate-ffi
src/: async_support.rs  asynchronous.rs  build.rs  error.rs  ffi.rs  futures_support.rs  iterator.rs  lib.rs  tokio_support.rs  uncompress.rs  zip_preflight.rs
src/ffi/: generated.rs  locale.rs  mod.rs
tests/: async_integration_test.rs  disk_full_test.rs  integration_test.rs
tests/fixtures/: absolute-path.tar  tree.7z  tree.rar  tree.tar.bz2  tree.tar.lz  tree.tar.lzma  tree.tar.xz  utf8.tar
