[package]
name = "compress-tools"
version = "0.6.0"
authors = ["Jonathas-Conceicao <jadoliveira@inf.ufpel.edu.br>"]
description = "Utility functions for compressed and archive files handling"
repository = "https://github.com/OSSystems/compress-tools-rs"
homepage = "https://github.com/OSSystems/compress-tools-rs"
documentation = "https://docs.rs/compress-tools"
keywords = ["compression", "archive"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
build = "src/build.rs"

[badges]
coveralls = { repository = "ossystems/compress-tools-rs" }

[dependencies]
derive_more = { version = "0.99", default-features = false, features = ["display", "from", "error"] }
async-trait = { version = "0.1.39", optional = true }
futures-channel = { version = "0.3.5", features = ["sink"], optional = true }
futures-core = { version = "0.3.5", optional = true }
futures-io = { version = "0.3.5", optional = true }
futures-util = { version = "0.3.5", features = ["sink", "io"], optional = true }
futures-executor = { version = "0.3.5", optional = true }
blocking = { version = "0.6.1", optional = true }
tokio = { version = "0.2.22", features = ["blocking", "macros"], optional = true }
tokio-util = { version = "0.3.1", features = ["compat"], optional = true }

[features]
async_support = ["async-trait", "futures-channel", "futures-core", "futures-io", "futures-util", "futures-executor"]
futures_support = ["async_support", "blocking"]
tokio_support = ["async_support", "tokio", "tokio-util"]

[dev-dependencies]
tempfile = "3.1"
argh = "0.1"
async-std = { version = "1.6.3", features = ["attributes"] }
tokio = { version = "0.2.22", features = ["fs", "net"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
vcpkg = "0.2"

[target.'cfg(not(target_os = "windows"))'.build-dependencies]
pkg-config = "0.3"

[[example]]
name = "uncompress_service_futures"
required-features = ["futures_support"]

[[example]]
name = "uncompress_service_tokio"
required-features = ["tokio_support"]
