[package]
name = "compress-tools"
version = "0.16.1"
authors = ["Jonathas-Conceicao <jadoliveira@inf.ufpel.edu.br>"]
description = "Utility functions for compressed and archive files handling"
repository = "https://github.com/OSSystems/compress-tools-rs"
homepage = "https://github.com/OSSystems/compress-tools-rs"
documentation = "https://docs.rs/compress-tools"
keywords = ["compression", "archive"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
build = "src/build.rs"
rust-version = "1.82.0"

[package.metadata.docs.rs]
features = ["futures_support", "tokio_support"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.playground]
all-features = true

[badges]
coveralls = { repository = "ossystems/compress-tools-rs" }

[dependencies]
derive_more = { version = "2.1", default-features = false, features = ["std", "display", "from", "error"] }
async-trait = { version = "0.1.39", optional = true }
futures-channel = { version = "0.3.5", features = ["sink"], optional = true }
futures-core = { version = "0.3.5", optional = true }
futures-io = { version = "0.3.5", optional = true }
futures-util = { version = "0.3.5", features = ["sink", "io"], optional = true }
futures-executor = { version = "0.3.5", optional = true }
blocking = { version = "1.0.0", optional = true }
tokio = { version = "1.0.0", features = ["rt-multi-thread", "macros", "fs", "net"], optional = true }
tokio-util = { version = "0.7.0", features = ["compat"], optional = true }
libc = "0.2.86"

[features]
default = ["win_user32", "win_crypt32", "win_advapi32", "win_xmllite"]
async_support = ["async-trait", "futures-channel", "futures-core", "futures-io", "futures-util", "futures-executor"]
futures_support = ["async_support", "blocking"]
tokio_support = ["async_support", "tokio", "tokio-util"]
static = [
    "static_b2",
    "static_lz4",
    "static_zstd",
    "static_lzma",
    "static_bz2",
    "static_z",
    "static_xml2",
    "win_user32",
    "win_crypt32",
    "win_advapi32",
    "win_xmllite",
]
static_b2 = []
static_lz4 = []
static_zstd = []
static_lzma = []
static_bz2 = []
static_z = []
static_xml2 = []
win_user32 = []
win_crypt32 = []
win_advapi32 = []
win_xmllite = []

[dev-dependencies]
tempfile = "3.1"
argh = "0.1"
smol = "2.0"
tokio = { version = "1.0.0", features = ["fs", "net"] }
encoding_rs = "0.8.32"
futures-util = { version = "0.3.5", features = ["io"] }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
pkg-config = "0.3"

[[example]]
name = "uncompress_service_futures"
required-features = ["futures_support"]

[[example]]
name = "uncompress_service_tokio"
required-features = ["tokio_support"]
